--- a/mish.html
+++ b/mish.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html> lang="es">
 <head>
-<title>Page Title</title>
+    <meta charsert="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>tareabootstrap</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+     .caja {
+      background-color: rgb(50, 150, 183);
+      border: 2px solid rgb(6, 6, 116);    /* Box Model: Border */
+      padding: 20px;             /* Box Model: Padding */
+      margin: 10px;              /* Box Model: Margin */
+      text-align: center;
+     }
+     </style>
 </head>
 <body>
+    <div class="container">
+  <h1 class="text-center my-4">Mi Primer MishSYSTEM</h1>
 
-<h1>Tralalero Tralala.</h1>
-<p>Tung Tung TUng Sahur.</p>
+  <div class="row">
+    <div class="col-md-4 caja">Columna 1</div>
+    <div class="col-md-4 caja">Columna 2</div>
+    <div class="col-md-4 caja">Columna 3</div>
+  </div>
+
+  <div class="d-flex justify-content-center mt-4">
+    <div class="caja">Flex 1</div>
+    <div class="caja">Flex 2</div>
+  </div>
+</div>
+
 
 </body>
 </html>
